--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,7 +15,7 @@
   font-size: 30px;
   line-height: 38px;
   font-weight: 600;
-  color: #fff;
+  color: #4E61A5;
   margin: 0;
   margin-left: 10px;
 }
