--- a/client/src/components/Header/index.module.css
+++ b/client/src/components/Header/index.module.css
@@ -4,6 +4,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  position: fixed; 
+  z-index: 1;
+  width: 100%; 
 }
 
 .breadcrumbs {
