--- a/client/src/index.less
+++ b/client/src/index.less
@@ -1,8 +1,8 @@
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
-
 @import 'node_modules/antd/lib/style/themes/default.less';
 @import 'node_modules/antd/dist/antd.less';
-@font-family: 'DM Sans', sans-serif;
 
+@font-family: 'DM Sans', sans-serif;
 @primary-color: #4E61A5;
 @layout-header-background: @white;
+@blue-base: @primary-color;
