create enterprise via github packages

--- a/client/src/components/Header/index.module.css
+++ b/client/src/components/Header/index.module.css
@@ -5,8 +5,9 @@
   flex-direction: row;
   align-items: center;
   position: fixed; 
-  z-index: 1;
-  width: 100%; 
+  left: 220px;
+  right: 0;
+  justify-content: space-between;
 }
 
 .breadcrumbs {
