--- a/client/src/components/Header/index.module.css
+++ b/client/src/components/Header/index.module.css
@@ -8,6 +8,8 @@
   left: 220px;
   right: 0;
   justify-content: space-between;
+  z-index: 9;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
 }
 
 .breadcrumbs {
