rubygems, bump osso-react

--- a/client/src/components/ConfigureIdentityProvider/index.module.css
+++ b/client/src/components/ConfigureIdentityProvider/index.module.css
@@ -25,3 +25,9 @@
   font-size: 16px;
   margin-top: 24px;
 }
+
+.ossoFormInstructions {
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 16px;
+}
