--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,13 @@ body {
   display: flex;
   flex-grow: 1;
 }
+
+
+.slick-track {
+  display: flex;
+}
+
+.slick-track .slick-slide {
+  display: flex;
+  height: auto;
+}
