--- a/client/src/components/AccountIdentityProviders/index.module.css
+++ b/client/src/components/AccountIdentityProviders/index.module.css
@@ -65,6 +65,7 @@
   flex-direction: row;
   justify-content: flex-end;
   flex-wrap: wrap;
+  align-items: baseline;
 }
 
 @media screen and (min-width: 1080px) {
