--- a/public/styles.css
+++ b/public/styles.css
@@ -21,6 +21,10 @@ html, body {
   border-radius: 4px;
 }
 
+.idp-selector .title {
+  color: #595959;
+}
+
 .providers{
   display: grid;
   grid-gap: 8px;
