--- a/views/multiple_providers.erb
+++ b/views/multiple_providers.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="idp-selector">
-    <p>Please select your Identity Provider</p>
+    <p class="title">Please select your Identity Provider</p>
     <div class="providers <%= @providers.count > 3 ? 'two-cols' : 'three-cols' %>">
       <% @providers.map do |provider| %>
         <a href="<%=provider.sso_url %>">
