--- a/views/multiple_providers.erb
+++ b/views/multiple_providers.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="idp-selector">
     <p class="title">Please select your Identity Provider</p>
-    <div class="providers <%= @providers.count > 3 ? 'two-cols' : 'three-cols' %>">
+    <div class="providers <%= @providers.count > 3 ? 'multi-rows' : 'one-row' %>">
       <% @providers.map do |provider| %>
         <a href="<%=provider.sso_url %>">
           <div class="provider">
