--- a/views/error.erb
+++ b/views/error.erb
@@ -1,1 +1,14 @@
-<%= @error.message %>
+<div class="error-container">
+  <div class="error-main">
+    <h1>:(</h1>
+    <h2>uh-SS-oh!</h2>
+    <h4>SSOmething went wrong</h4>
+    <h4><%= @error %></h4>
+
+    <%= @error.message %>
+    <% if @error.docs_url %> 
+      <hr />
+      <a target="_blank" href='<%= @error.docs_url %>'>Review Documentation</a>
+    <% end %>  
+    </div>
+</div>
