--- a/client/src/components/AccountIdentityProvider/index.module.css
+++ b/client/src/components/AccountIdentityProvider/index.module.css
@@ -5,71 +5,53 @@
   flex-direction: column;
 }
 
-.topRow {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 24px;
-}
-
-.topRow > h1 {
-  font-weight: 600;
-}
-
-.carouselContainer {
-  width: 100%;
-  flex-grow: 1;
-  display: flex;
-  overflow: hidden;
-}
-
-.carouselContainer > div {
-  max-width: 100%;
-  position: relative;
-  overflow: hidden;
-}
-
 .cardRoot {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
+  margin-bottom: 24px;
 }
 
 .cardTitle {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.cardTitle > p {
-  margin: 0;
-}
-
-.cardBody {
-  margin-bottom: 16px;
-  display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: flex-start;
+}
+
+.avatarContainer {
+  border: 1px solid #D9D9D9;
+  padding: 18px 0;
+  width: 64px;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 16px;
+  background-color: #ffffff;
+}
+
+.mainContainer {
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  width: 100%;
 }
 
-.icon {
-  margin-right: 30px;
-  font-size: 28px;
-}
-
-.cardFooter {
+.statusRow {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
-  flex-wrap: wrap;
-  align-items: baseline;
+  justify-content: space-between;
 }
 
-@media screen and (min-width: 1080px) {
-  .cardFooter > a + .cardFooter > button {
-    margin-top: 6px;
-  }
+label {
+  font-weight: 600;
+  margin-right: 8px;
+}
+
+.copyContainer {
+  height: 72px;
+}
+
+.separator {
+  border: 1px solid #E8E8E8;
+  width: 0px;
+  height: 260px;
+  margin: 0 16px;  
 }
