--- a/client/src/components/AccountIdentityProvider/index.module.css
+++ b/client/src/components/AccountIdentityProvider/index.module.css
@@ -14,6 +14,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+  font-weight: 600;
 }
 
 .avatarContainer {
@@ -32,12 +33,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100%;
 }
 
 .statusRow {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 24px;
 }
 
 label {
