--- a/client/src/components/CustomerHeader/index.module.css
+++ b/client/src/components/CustomerHeader/index.module.css
@@ -12,7 +12,7 @@
 .leftContainer {
   display: flex;
   flex-direction: row;
-  align-items: end;
+  align-items: center;
 }
 
 .avatar {
@@ -36,7 +36,6 @@
 .companyAttributes {
   display: flex;
   flex-direction: row;
-  margin-right: 106px;
 }
 
 .companyAttribute {
