update creation modal

--- a/client/src/components/CreateIdentityProvider/index.module.css
+++ b/client/src/components/CreateIdentityProvider/index.module.css
@@ -6,6 +6,10 @@
   margin-bottom: 24px;
 }
 
+.modalBody {
+  margin: 33px 0;
+}
+
 .buttonRow {
   display: flex;
   justify-content: space-between;
