--- a/client/src/components/AccountEmptyIdentityProviders/index.module.css
+++ b/client/src/components/AccountEmptyIdentityProviders/index.module.css
@@ -9,6 +9,13 @@
   margin-bottom: 24px;
 }
 
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .cardTitle {
   display: flex;
   flex-direction: row;
