--- a/client/src/components/AccountIdentityProvider/index.module.css
+++ b/client/src/components/AccountIdentityProvider/index.module.css
@@ -34,6 +34,9 @@
   justify-content: center;
   background-color: #ffffff;
 }
+.avatarContainer > img {
+  max-width: 40px;
+}
 
 .providerName {
   margin-left: 16px;
