--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <title></title>
+    <title>SSO Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
