--- a/views/rodauth/layout.erb
+++ b/views/rodauth/layout.erb
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="/index.css">
   </head>
   <body>
-    <%= yield %>
+  <div id="container" style="padding-top: 20vh">
+    <div class="ant-row"><div class="ant-col ant-col-4 ant-col-offset-10">
+      <%= yield %>
+    </div>
+    </div>
+  </div>
+    
   </body>
 </html>
