--- a/views/hosted_login.erb
+++ b/views/hosted_login.erb
@@ -1,10 +1,18 @@
 <div class="container">
-  <form method='get'>
-    <label for="email">Email</label>
-    <input id="email" type="email" name="email" />
-    <input type="hidden" name="redirect_uri" value="<%= params[:redirect_uri] %>" />
-    <input type="hidden" name="client_id" value="<%= params[:client_id] %>" />
-    <input type="hidden" name="state" value="<%= params[:state] %>" />
-    <input type="hidden" name="response_type" value="code" />
-  </form>
+  <div class="main-content hosted-login">
+    <h1>Please enter your email address</h1>
+    <form id="hosted-login-form" class="hosted-login-form" method='get'>
+      <label for="email">Work email</label>
+      <input id="email" type="email" name="email" required placeholder="you@company.com" />
+      <input type="hidden" name="redirect_uri" value="<%= params[:redirect_uri] %>" />
+      <input type="hidden" name="client_id" value="<%= params[:client_id] %>" />
+      <input type="hidden" name="state" value="<%= params[:state] %>" />
+      <input type="hidden" name="response_type" value="code" />
+    </form>
+
+      <div class="button-row">
+        <% if true %> <button onclick="window.history.go(-1)">Go back</button><% end %>
+        <input type="submit" value="Sign in" form="hosted-login-form"/>
+      </div>  
+  </div>  
 </div>  
