--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>SSO Login</title>
+    <title>SAML SSO Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://unpkg.com/modern-css-reset/dist/reset.min.css" />
     <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
