--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,10 +1,12 @@
+<!-- layout for views accessed by SAML end users  -->
 <!doctype html>
 <html>
   <head>
     <title>SAML SSO Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/modern-css-reset/dist/reset.min.css" />
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/assets/reset.min.css" />
+    <link rel="stylesheet" href="/assets/end-user.css">
+    <script type="text/javascript" src="/assets/end-user.js"></script>
   </head>
   <body>
     <%= yield %>
