--- a/views/rodauth/layout.erb
+++ b/views/rodauth/layout.erb
@@ -1,10 +1,11 @@
-
+<!-- Layout for Admin ui non-react pages - these pages may get pushed down into the react app -->
 <!doctype html>
 <html>
   <head>
     <title>Osso Admin Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/assets/reset.min.css" />
+    <link rel="stylesheet" href="/assets/ant.css">
   </head>
   <body>
   <div id="container" style="padding-top: 20vh">
