--- a/bassets/end-user.css
+++ b/bassets/end-user.css
@@ -1,7 +1,7 @@
 html, body {
   height: 100vh;
   background-color: #e8e8e8;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin: 0;
   overscroll-behavior: none;
 }
@@ -22,18 +22,18 @@ html, body {
   align-items: flex-start;
   background: #FFFFFF;
   border-radius: 4px;
-  width: 325px;
+  width: 400px;
   filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
   padding: 32px;
 }
 
 .main-content h1 {
   font-style: normal;
-  font-weight: normal;
+  font-weight: 600;
   font-size: 16px;
   line-height: 24px;
   color: #262626;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
   width: 100%;
 }
 
@@ -148,7 +148,7 @@ html, body {
   box-sizing: border-box;
   border-radius: 2px;
   padding: 8px 6px;
-  margin-bottom: 28px;
+  margin-bottom: 44px;
   font-size: 14px;
   line-height: 22px;
   color: #000000;
