--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,9 +1,14 @@
+<!-- layout for views accessed by SAML end users  -->
 <!doctype html>
 <html>
   <head>
-    <title>SSO Login</title>
+    <title>SAML SSO Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/reset.min.css" />
+    <link rel="stylesheet" href="/assets/end-user.css">
+    <script type="text/javascript" src="/assets/end-user.js"></script>
   </head>
   <body>
     <%= yield %>
