rm rake task and public

--- a/views/rodauth/layout.erb
+++ b/views/rodauth/layout.erb
@@ -4,7 +4,7 @@
   <head>
     <title>Osso Admin Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/public/admin.css" />
+    <link rel="stylesheet" href="/admin.css" />
   </head>
   <body>
   <div id="container" style="padding-top: 20vh">
