--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/end-user.css">
-    <script type="text/javascript" src="/public/end-user.js"></script>
+    <script type="text/javascript" src="/end-user.js"></script>
   </head>
   <body>
     <%= yield %>
