--- a/views/rodauth/layout.erb
+++ b/views/rodauth/layout.erb
@@ -4,7 +4,11 @@
   <head>
     <title>Osso Admin Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/admin.css" />
+     <% if ENV['RACK_ENV'] === 'development' %>
+        <link rel="stylesheet" type="text/css" href="http://localhost:1234/admin.css">
+    <% else %>  
+        <link rel="stylesheet" href="/admin.css" />
+    <% end %> 
   </head>
   <body>
   <div id="container" style="padding-top: 20vh">
