--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/reset.min.css" />
-    <link rel="stylesheet" href="/assets/end-user.css">
-    <script type="text/javascript" src="/assets/end-user.js"></script>
+    <link rel="stylesheet" href="/saml.css">
+    <script type="text/javascript" src="/saml.js"></script>
   </head>
   <body>
     <%= yield %>
