--- a/views/rodauth/layout.erb
+++ b/views/rodauth/layout.erb
@@ -4,8 +4,7 @@
   <head>
     <title>Osso Admin Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/assets/reset.min.css" />
-    <link rel="stylesheet" href="/assets/ant.css">
+    <link rel="stylesheet" href="/admin.css" />
   </head>
   <body>
   <div id="container" style="padding-top: 20vh">
