--- a/views/rodauth/verify-first-account-email.erb
+++ b/views/rodauth/verify-first-account-email.erb
@@ -1,8 +1,8 @@
-Hello!
+Hello,
 
-Your Osso instance is deployed and ready to start using.
+Great news! Your Osso instance is deployed and ready for use.
 
-Please visit <%= rodauth.verify_account_email_link %> to create your admin account and specify a password. You'll be able to invite teammates to your instance once you've signed in.
+Please visit <%= rodauth.verify_account_email_link %> to create your admin account and specify a password. Once that's done you'll be able to invite teammates to your Osso instance.
 
 Review our documentation for integrating Osso into your application.
 
