ids for cypress

--- a/views/rodauth/verify-account-email.erb
+++ b/views/rodauth/verify-account-email.erb
@@ -4,7 +4,7 @@ A colleague has invited you to start using Osso to manage SAML SSO.
 
 Visit <%= rodauth.verify_account_email_link %> to specify a password and create your account.
 
-You can learn more about Osso at ossoapp.com
+You can learn more about Osso at <a href="https://ossoapp.com/docs/consume/overview" target="_blank">ossoapp.com</a>.
 
 Thanks,
 The Osso Team
