--- a/client/src/pages/login/styles.module.css
+++ b/client/src/pages/login/styles.module.css
@@ -38,3 +38,9 @@
 .formItem label {
   color: white;
 }
+
+.submitButton:hover, .submitButton:focus {
+  color: white;
+  border-color: white;
+  filter: drop-shadow(0px 0px 8px rgba(255, 255, 255, 0.5));
+}
