--- a/spec/support/spec_sp/views/index.erb
+++ b/spec/support/spec_sp/views/index.erb
@@ -1,17 +1,19 @@
-<form id="saml" action="/auth/saml" method="post">
+<form id="saml" action="/auth/osso" method="post">
+  <input type="hidden" value='<%= request.env["rack.session"]["csrf"] %>' name="authenticity_token" />
   <div class="form-field">
     <label>Email</label>
-    <input name='email' type='text' />
+    <input id='email' name='email' type='text' />
   </div>
 
   <div class="form-field">
     <label>Domain</label>
-    <input name='domain' type='text' />
+    <input id='domain' name='domain' type='text' />
   </div>
-  <button type='submit'>Sign In</button>
+  <button id='sign-in-btn' type='submit'>Sign In</button>
 </form>
 
 
-<form id="saml" action="/auth/saml" method="post">
+<form id="saml" action="/auth/osso" method="post">
+  <input type="hidden" value='<%= request.env["rack.session"]["csrf"] %>' name="authenticity_token" />
   <button type='submit'>Hosted Sign In</button>
 </form>
